docs(content): update type to variant

--- a/src/pages/components/breadcrumb/usage.mdx
+++ b/src/pages/components/breadcrumb/usage.mdx
@@ -48,16 +48,16 @@ level navigation because they create unnecessary clutter.
 If you are taking users through a multistep process use a
 [progress indicator](/components/progress-indicator/usage/) instead.
 
-### Types
+### Variants
 
-Carbon supports two types of breadcrumbs. Both types are styled the same, but
-the methods for populating the breadcrumb trail are different. The breadcrumb
-type used should be consistent across a product.
+Carbon supports two variants of breadcrumbs. Both variants are styled the same,
+but the methods for populating the breadcrumb trail are different. The
+breadcrumb variant used should be consistent across a product.
 
-| Breadcrumb type  | Purpose                                                                                                                                                                                    |
-| ---------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| _Location-based_ | These illustrate the site’s hierarchy and show the user where they are within that hierarchy.                                                                                              |
-| _Path-based_     | These show the actual steps the user took to get to the current page, rather than reflecting the site’s information architecture. Path-based breadcrumbs are always dynamically generated. |
+| Breadcrumb variant | Purpose                                                                                                                                                                                    |
+| ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| _Location-based_   | These illustrate the site’s hierarchy and show the user where they are within that hierarchy.                                                                                              |
+| _Path-based_       | These show the actual steps the user took to get to the current page, rather than reflecting the site’s information architecture. Path-based breadcrumbs are always dynamically generated. |
 
 ## Live demo
 
