--- a/src/pages/components/button/usage.mdx
+++ b/src/pages/components/button/usage.mdx
@@ -55,17 +55,17 @@ Do not use buttons as navigational elements. Instead, use
 [links](https://www.carbondesignsystem.com/components/link/usage) when the
 desired action is to take the user to a new page.
 
-### Button types
+### Button variants
 
 <Row>
 <Column colLg={12}>
 
-![Button types](images/button_usage_1.png)
+![Button variants](images/button_usage_1.png)
 
 </Column>
 </Row>
 
-| Type        | Purpose                                                                                                                                                       |
+| Variant     | Purpose                                                                                                                                                       |
 | ----------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | _Primary_   | For the principal call to action on the page. Primary buttons should only appear once per screen (not including the application header or in a modal dialog). |
 | _Secondary_ | For secondary actions on each page; these can only be used  in conjunction with a primary button.                                                             |
@@ -628,8 +628,8 @@ a text label, but use icon buttons cautiously.
 ### Icon-only buttons
 
 Icon buttons allow users to take actions, and make choices, with a single tap.
-Icon buttons can take the form of any of the five types above but most commonly
-will be styled as primary or ghost buttons.
+Icon buttons can take the form of any of the five variants above but most
+commonly will be styled as primary or ghost buttons.
 
 <Row>
 <Column colLg={8}>
