--- a/src/pages/components/data-table/usage.mdx
+++ b/src/pages/components/data-table/usage.mdx
@@ -48,13 +48,13 @@ table display settings, and other utilities.
 - When a more complex display of the data or interactions are required.
 - As a replacement for a spreadsheet application.
 
-### Types
+### Variants
 
-| Type             | Purpose                                                                                                                                                                                                                             |
-| ---------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| _Default_        | The default data table comes with a base style with only the title, header, and table elements. rows.                                                                                                                               |
-| _With selection_ | Batch actions are functions that may be performed on multiple items within a table. This type of table enables the user to select individual rows and apply an action. A batch action toolbar appears when table rows are selected. |
-| _With expansion_ | The expandable data table is useful for presenting large amounts of data in a small space. Rows are collapsed and can be expanded to reveal extra information.                                                                      |
+| Variant          | Purpose                                                                                                                                                                                                                                |
+| ---------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| _Default_        | The default data table comes with a base style with only the title, header, and table elements. rows.                                                                                                                                  |
+| _With selection_ | Batch actions are functions that may be performed on multiple items within a table. This variant of table enables the user to select individual rows and apply an action. A batch action toolbar appears when table rows are selected. |
+| _With expansion_ | The expandable data table is useful for presenting large amounts of data in a small space. Rows are collapsed and can be expanded to reveal extra information.                                                                         |
 
 ## Live demo
 
@@ -674,10 +674,10 @@ view the information and complete tasks.
 </Column>
 </Row>
 
-By default, the expand-all chevron is not shown. Keeping detailed information in the
-expanded section saves user loading time by postponing some data queries until
-needed. Expanding all rows at once will typically negate this advantage of the
-expandable table. If additional load time is expected to display expanded
+By default, the expand-all chevron is not shown. Keeping detailed information in
+the expanded section saves user loading time by postponing some data queries
+until needed. Expanding all rows at once will typically negate this advantage of
+the expandable table. If additional load time is expected to display expanded
 information, use skeleton states instead of spinners.
 
 <Row>
