--- a/src/pages/components/dropdown/usage.mdx
+++ b/src/pages/components/dropdown/usage.mdx
@@ -36,12 +36,12 @@ import items from '../../../data/components/dropdown.js';
 
 ## Overview
 
-There are three different types of dropdowns that support various kinds of
+There are three different variants of dropdowns that support various kinds of
 functionality—dropdown, multiselect, and combo box.
 
-### Types
+### Variants
 
-| Type                        | Purpose                                                                                                  |
+| Variant                     | Purpose                                                                                                  |
 | --------------------------- | -------------------------------------------------------------------------------------------------------- |
 | [Dropdown](#dropdown)       | Allows the user to select one option from a list.                                                        |
 | [Multiselect](#multiselect) | Allows the user to select multiple options from a list and filter.                                       |
@@ -328,8 +328,8 @@ For further content guidance, see Carbon's
 
 ## Universal behaviors
 
-The behaviors listed in this section are universal across all of the types. For
-behaviors that are unique to each type, see the sections below.
+The behaviors listed in this section are universal across all of the variants.
+For behaviors that are unique to each variant, see the sections below.
 
 ### Direction
 
