--- a/src/pages/components/link/usage.mdx
+++ b/src/pages/components/link/usage.mdx
@@ -20,7 +20,7 @@ sentence or paragraph, or directly following the content.
 <AnchorLink>Formatting</AnchorLink>
 <AnchorLink>Content</AnchorLink>
 <AnchorLink>Behaviors</AnchorLink>
-<AnchorLink>Link types</AnchorLink>
+<AnchorLink>Link variants</AnchorLink>
 <AnchorLink>Modifiers</AnchorLink>
 <AnchorLink>Related</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
@@ -50,12 +50,12 @@ Use a button instead of a link for actions that will change data or manipulate
 how it is displayed, change a state, or trigger an action. Buttons should never
 be used for navigational actions.
 
-### Types
+### Variants
 
-| Type                           | Usage                                                                                                                                                            |
-| ------------------------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [Standalone](#standalone-link) | These links are the default link type. They are used on their own or directly following content and they do not use underlines. They can be paired with an icon. |
-| [Inline](#inline-link)         | Inline links are used within a sentence or paragraph and are styled with an underline. They should not be paired with an icon.                                   |
+| Variant                        | Usage                                                                                                                                                               |
+| ------------------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [Standalone](#standalone-link) | These links are the default link variant. They are used on their own or directly following content and they do not use underlines. They can be paired with an icon. |
+| [Inline](#inline-link)         | Inline links are used within a sentence or paragraph and are styled with an underline. They should not be paired with an icon.                                      |
 
 ## Live demo
 
@@ -133,7 +133,7 @@ NVDA: Users can open a link by pressing `Enter`.
 For additional information, see
 [screen reader tests](accessibility/#macos-screen-reader-tests).
 
-## Link types
+## Link variants
 
 ### Standalone link
 
