--- a/src/pages/components/search/usage.mdx
+++ b/src/pages/components/search/usage.mdx
@@ -17,7 +17,7 @@ content without the use of navigation.
 
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Live demo</AnchorLink>
-<AnchorLink>Variations</AnchorLink>
+<AnchorLink>Variants</AnchorLink>
 <AnchorLink>Formatting</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
 
@@ -57,9 +57,9 @@ to aid the user in finding content.
   `}</ComponentVariant>
 </ComponentDemo>
 
-## Variations
+## Variants
 
-| Search type  | Purpose                                                                                                                                                                                                    |
+| Variant      | Purpose                                                                                                                                                                                                    |
 | ------------ | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | Large search | This should be used at a global level when the user is searching content within a page view.                                                                                                               |
 | Small search | Choose small when there are space constraints in your design. It can also be component-specific. For example, small search can be used to filter data within a [data table](/components/data-table/usage). |
