--- a/src/pages/components/tile/usage.mdx
+++ b/src/pages/components/tile/usage.mdx
@@ -17,7 +17,7 @@ including information, getting started, how-to, next steps, and more.
 
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Live demo</AnchorLink>
-<AnchorLink>Variations</AnchorLink>
+<AnchorLink>Variants</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
 
 </AnchorLinks>
@@ -220,7 +220,7 @@ for the most important action a user can take on the page.
   `}</ComponentVariant>
 </ComponentDemo>
 
-## Variations
+## Variants
 
 All of the images below represent examples of types of content that could be
 presented within a tile. The styling in these examples is for illustration only;
