--- a/src/pages/components/toggle/usage.mdx
+++ b/src/pages/components/toggle/usage.mdx
@@ -18,7 +18,7 @@ commonly used for “on/off” switches.
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Live demo</AnchorLink>
 <AnchorLink>Content</AnchorLink>
-<AnchorLink>Component types</AnchorLink>
+<AnchorLink>Variants</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
 
 </AnchorLinks>
@@ -105,7 +105,7 @@ less and appear on the side of a toggle.
 Use adjectives rather than verbs to describe labels and the state of the object
 affected.
 
-## Component types
+## Variants
 
 ### Small toggles
 
