--- a/src/pages/components/tooltip/usage.mdx
+++ b/src/pages/components/tooltip/usage.mdx
@@ -18,14 +18,14 @@ information should be contextual, useful, and nonessential.
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Live demo</AnchorLink>
 <AnchorLink>Placement</AnchorLink>
-<AnchorLink>Component types</AnchorLink>
+<AnchorLink>Variants</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
 
 </AnchorLinks>
 
 ## Overview
 
-There are three types of tooltips:
+There are three variants of tooltips:
 
 - Icon tooltip
 - Definition tooltip
@@ -154,7 +154,7 @@ obstruct important information to the left or right of the trigger word.
 </Column>
 </Row>
 
-## Component types
+## Variants
 
 Tooltips provide additional, contextual information. Each variant achieves this
 for different design needs.
