--- a/src/pages/components/code-snippet/usage.mdx
+++ b/src/pages/components/code-snippet/usage.mdx
@@ -35,12 +35,12 @@ import {
 
 ## Overview
 
-There are three different types of code snippets to help cater to varied line
+There are three different variants of code snippets to help cater to varied line
 length use cases—inline, single line, and multi-line.
 
-### Types
+### Variants
 
-| Type                        | Purpose                                                               |
+| Variant                     | Purpose                                                               |
 | --------------------------- | --------------------------------------------------------------------- |
 | [Inline](#inline)           | A block of text used inline with sentences or paragraphs.             |
 | [Single line](#single-line) | A single line of code.                                                |
