--- a/src/pages/components/date-picker/usage.mdx
+++ b/src/pages/components/date-picker/usage.mdx
@@ -40,9 +40,9 @@ depending on location or need.
 Use date and time pickers when you are asking the user for a time or date, or
 for scheduling tasks.
 
-### Types
+### Variants
 
-| Type                | Purpose                                                                                                                                                                                                                               |
+| Variant             | Purpose                                                                                                                                                                                                                               |
 | ------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | _Simple date input_ | Use if the date can be remembered by the user easily, such as a date of birth, and they don’t need a calendar to anticipate the dates. It consists only of input fields.                                                              |
 | _Calendar pickers_  | Use a calendar picker when the user needs to know a date's relationship to other days or when a date could be variable. It allows the user to view and pick dates from a calendar widget or manually type the date in the text field. |
@@ -289,9 +289,9 @@ Carbon’s [content guidelines](https://www.carbondesignsystem.com/guidelines/c
 
 ## Universal behaviors
 
-The behaviors listed in this section are universal across all of the types. For
-behaviors that are unique to each type, see each of the component type sections
-below.
+The behaviors listed in this section are universal across all of the variants.
+For behaviors that are unique to each variant, see each of the component variant
+sections below.
 
 ### States
 
@@ -381,7 +381,7 @@ Use a calendar picker when the user needs to know a date's relation to other
 days such as the day of the week it falls on or its proximity to today. They are
 optimal for scheduling tasks.
 
-### Types
+### Variants
 
 #### Single date picker
 
@@ -553,8 +553,8 @@ a tile.
 
 Another common use case not accounted for in the above pickers is setting a time
 or date relative to today or now, such as with a reminder. For example, setting
-an install to begin now, in one hour, or tonight. This type of picker can made
-by using the standard [select](/components/select/usage/) component.
+an install to begin now, in one hour, or tonight. This variant of picker can
+made by using the standard [select](/components/select/usage/) component.
 
 #### Using individual inputs
 
