--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -31,12 +31,12 @@ location.
 
 File uploaders allow users to upload content of their own. A file uploader is
 commonly found in forms, but can also live as a standalone element. There are
-two types of file uploaders—our default file uploader and a drag and drop file
-uploader.
+two variants of file uploaders—our default file uploader and a drag and drop
+file uploader.
 
-### Types
+### Variants
 
-| Type                                                        | Way it works                                                                                |
+| Variant                                                     | Way it works                                                                                |
 | ----------------------------------------------------------- | ------------------------------------------------------------------------------------------- |
 | [File uploader](#file-uploader)                             | Upload one or more files by clicking an action button that prompts a file selection dialog. |
 | [Drag and drop file uploader](#drag-and-drop-file-uploader) | Drag and drop selected files directly into a drop zone area to upload.                      |
