--- a/src/pages/components/list/usage.mdx
+++ b/src/pages/components/list/usage.mdx
@@ -17,7 +17,7 @@ number or a bullet.
 
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Live demo</AnchorLink>
-<AnchorLink>Variations</AnchorLink>
+<AnchorLink>Variants</AnchorLink>
 <AnchorLink>Content</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
 
@@ -116,9 +116,9 @@ between list items.
   `}</ComponentVariant>
 </ComponentDemo>
 
-## Variations
+## Variants
 
-| List type       | Purpose                                                                            |
+| Variant         | Purpose                                                                            |
 | --------------- | ---------------------------------------------------------------------------------- |
 | Unordered lists | To present content of equal status or value.                                       |
 | Ordered lists   | Imply sequence and order, and are commonly used when giving a set of instructions. |
