--- a/src/pages/components/modal/usage.mdx
+++ b/src/pages/components/modal/usage.mdx
@@ -20,7 +20,7 @@ information via a window that sits on top of the page content.
 <AnchorLink>Formatting</AnchorLink>
 <AnchorLink>Content</AnchorLink>
 <AnchorLink>Behaviors</AnchorLink>
-<AnchorLink>Modal types</AnchorLink>
+<AnchorLink>Modal variants</AnchorLink>
 <AnchorLink>Related</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
 
@@ -28,12 +28,12 @@ information via a window that sits on top of the page content.
 
 ## Overview
 
-Modals are a type of [dialog](/patterns/dialog-pattern) used to present critical
-information or request user input needed to complete a user’s workflow. Modals
-interrupt a user’s workflow by design. When active, a user is blocked from the
-on-page content and cannot return to their previous workflow until the modal
-task is completed or the user dismisses the modal. While effective when used
-correctly, modals should be used sparingly to limit disruption to the user.
+Modals are a variant of [dialog](/patterns/dialog-pattern) used to present
+critical information or request user input needed to complete a user’s workflow.
+Modals interrupt a user’s workflow by design. When active, a user is blocked
+from the on-page content and cannot return to their previous workflow until the
+modal task is completed or the user dismisses the modal. While effective when
+used correctly, modals should be used sparingly to limit disruption to the user.
 
 Modal dialogs are commonly used for short and non-frequent tasks, such as
 editing or management tasks. If a user needs to repeatably preform a task,
@@ -59,13 +59,13 @@ confirmed and explain any potential consequences that it may cause. Both the
 title and the button should reflect the action that will occur. If the action is
 destructive or irreversible then use a transactional danger modal.
 
-### Types
+### Variants
 
-| Type                                                           | Usage                                                                                                                           |
+| Variant                                                        | Usage                                                                                                                           |
 | -------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------- |
 | [Passive](/components/modal/usage#passive-modal)               | Presents information the user needs to be aware of concerning their current workflow. Contains no actions for the user to take. |
 | [Transactional](/components/modal/usage#transactional-modal)   | Requires an action to be taken in order for the modal to be completed and closed. Contains a cancel and primary action buttons. |
-| [Danger](/components/modal/usage#danger-modal)                 | A specific type of transactional modal used for destructive or irreversible actions.                                            |
+| [Danger](/components/modal/usage#danger-modal)                 | A specific variant of transactional modal used for destructive or irreversible actions.                                         |
 | [Acknowledgment](/components/modal/usage#acknowledgment-modal) | System requires an acknowledgement of the information from the user. Contains only a single button, commonly "OK".              |
 | [Progress](/components/modal/usage#progress-modal)             | Requires several steps to be completed before it can be closed. Contains a cancel, previous, and next/completion buttons.       |
 
@@ -344,7 +344,7 @@ and immediate error messaging can help the user to understand the problem and
 how to fix it.
 
 When possible, we recommend validating the user’s data before submission. This
-type of inline validation (aka client-side validation) should happen as soon as
+kind of inline validation (aka client-side validation) should happen as soon as
 the field loses focus. This will help easily identify the elements that need to
 be corrected. On field error messages should disappear when the form criteria is
 met. If the data was not able to be submitted due to server-side issues then an
@@ -358,7 +358,7 @@ inline notification should appear.
 </Column>
 </Row>
 
-## Modal types
+## Modal variants
 
 ### Passive modal
 
@@ -438,7 +438,7 @@ buttons.
 
 ### Danger modal
 
-Danger modal is a specific type of
+Danger modal is a specific kind of
 [transactional modal](/components/modal/usage#transactional-modal) used for
 destructive or irreversible actions. In danger modal, the primary button is
 replaced by a danger button. They are commonly used in high impact moments as a
