--- a/src/pages/components/select/usage.mdx
+++ b/src/pages/components/select/usage.mdx
@@ -17,7 +17,7 @@ in forms for users to submit data.
 
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Live demo</AnchorLink>
-<AnchorLink>Variations</AnchorLink>
+<AnchorLink>Variants</AnchorLink>
 <AnchorLink>Best practices</AnchorLink>
 <AnchorLink>Accessibility</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
@@ -106,9 +106,9 @@ while the dropdown component can be styled as needed.
   `}</ComponentVariant>
 </ComponentDemo>
 
-## Variations
+## Variants
 
-| Select type     | Purpose                                                                                                                               |
+| Variant         | Purpose                                                                                                                               |
 | --------------- | ------------------------------------------------------------------------------------------------------------------------------------- |
 | _Default_       | Typically used in forms with a variety of other components.                                                                           |
 | _Small select_  | When vertical space is a concern, or select is being paired with a larger component like [data tables](/components/data-table/usage). |
