--- a/src/pages/components/tabs/usage.mdx
+++ b/src/pages/components/tabs/usage.mdx
@@ -18,7 +18,7 @@ context.
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Live demo</AnchorLink>
 <AnchorLink>Formatting</AnchorLink>
-<AnchorLink>Variations</AnchorLink>
+<AnchorLink>Variants</AnchorLink>
 <AnchorLink>Feedback</AnchorLink>
 
 </AnchorLinks>
@@ -110,12 +110,12 @@ needed, consider other navigation patterns, such as a
 Tab order should be consistent across an experience. Tabs with related content
 should be grouped adjacent to each other.
 
-## Variations
+## Variants
 
 There are two variations of tabs, default and container. They are hierarchically
 the same and should never be nested within each other.
 
-| Tab styles  | Purpose                                                                                                                                       |
+| Variant     | Purpose                                                                                                                                       |
 | ----------- | --------------------------------------------------------------------------------------------------------------------------------------------- |
 | _Default_   | A standalone tab that can also be nested within components. It is commonly used with smaller content areas.                                   |
 | _Container_ | An emphasized tab that is always paired with an attached background container. It is commonly used for larger content areas, like sub-pages.  |
