--- a/src/pages/components/text-input/usage.mdx
+++ b/src/pages/components/text-input/usage.mdx
@@ -29,7 +29,7 @@ There are instances, sometimes in the same form, where you need users to enter
 both short and long form content. Allow the size of the text input box to
 reflect the length of the content you expect the user to enter.
 
-| Type       | Purpose                                                                           |
+| Variant    | Purpose                                                                           |
 | ---------- | --------------------------------------------------------------------------------- |
 | Text input | When the expected user input is a single line of text, as opposed to a paragraph. |
 | Text area  | When the expected user input is more than one sentence.                           |
