chore(tutorial): step 2 updates

--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -253,6 +253,18 @@ src/components/TutorialHeader
 
 ### Add UI Shell Sass
 
+In `index.scss` add the following feature-flag **above** the Carbon styles
+import like so:
+
+```scss path=src/index.scss
+$feature-flags: (
+  ui-shell: true,
+);
+```
+
+This is because our UI Shell is in experimental mode and the styles need to be
+manually imported.
+
 Next, in `app.scss`, we'll import our `TutorialHeader` styles. Your file should
 now look like this:
 
