--- a/src/pages/community/patterns/export-pattern/index.mdx
+++ b/src/pages/community/patterns/export-pattern/index.mdx
@@ -34,6 +34,7 @@ Most of this pattern is applicable to both exporting and downloading.
 <AnchorLink>Intuitive default name</AnchorLink>
 <AnchorLink>Editable name</AnchorLink>
 <AnchorLink small>Optional extras</AnchorLink>
+<AnchorLink small>Accessibility</AnchorLink>
 
 </AnchorLinks>
 
@@ -150,3 +151,47 @@ A notification can be used to alert the user that an export has been successful.
 
 </Column>
 </Row>
+
+## Accessibility
+
+Adhere to
+[Carbon's modal guidelines](https://www.carbondesignsystem.com/components/modal/accessibility).
+
+### Trigger
+
+Most often, the export modal is triggered by clicking an Export button.
+
+1. The user navigates to the Export button using the `Tab` key. If Export is
+   launched from an overflow menu, the user may navigate to Export within the
+   overflow menu using the `Up` and `Down` arrow keys.
+2. The focus state is applied to the button/menu item.
+3. The user presses `Enter` to launch the Export modal.
+
+### Focus
+
+When the modal opens, focus is set depending on whether sensible default choices
+are defined or not.
+
+#### If the user must complete fields before the export can be executed:
+
+1. On opening the modal, the focus is applied to the first field that accepts
+   user input.
+2. On `Tab`, progress through any further fields that accept user input.
+3. On `Tab`, apply focus to Export.
+4. On `Tab`, apply focus to Cancel.
+
+#### If a sensible default value is provided:
+
+1. On opening the modal, set the focus to the Export button.
+2. On `Tab`, apply focus to Cancel.
+3. On `Tab`, apply focus to the first field that accepts user input. Follow
+   accessibility guidance for the interaction type of this field (for example
+   [Radio button](https://www.carbondesignsystem.com/components/radio-button/accessibility#how-it-works)
+   or
+   [Text input](https://www.carbondesignsystem.com/components/text-input/accessibility#how-it-works))
+4. On `Tab`, progress through any further fields that accept user input.
+
+### Success & Failure modals
+
+Where passive modals are used to alert the user of success or failure, open the
+modal with focus applied to the close icon.
