--- a/src/pages/components/breadcrumb/usage.mdx
+++ b/src/pages/components/breadcrumb/usage.mdx
@@ -52,7 +52,7 @@ If you are taking users through a multistep process use a
 
 Carbon supports two types of breadcrumbs. Both tyoes are styled the same, but
 the methods for populating the breadcrumb trail are different. The breadcrumb
-variant used should be consistent across a product.
+type used should be consistent across a product.
 
 | Breadcrumb type  | Purpose                                                                                                                                                                                    |
 | ---------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
