docs(content): update type to variant (#2035)
* docs(content): update type to variant

* Update usage.mdx

* Update src/pages/components/breadcrumb/usage.mdx

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>

Co-authored-by: Jan Child <44503588+janchild@users.noreply.github.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/components/breadcrumb/usage.mdx
+++ b/src/pages/components/breadcrumb/usage.mdx
@@ -50,7 +50,7 @@ If you are taking users through a multistep process use a
 
 ### Types
 
-Carbon supports two types of breadcrumbs. Both types are styled the same, but
+Carbon supports two types of breadcrumbs. Both tyoes are styled the same, but
 the methods for populating the breadcrumb trail are different. The breadcrumb
 type used should be consistent across a product.
 
