--- a/src/pages/developing/react-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/react-tutorial/wrapping-up.mdx
@@ -18,7 +18,7 @@ Badge.
 <AnchorLinks>
 
 <AnchorLink>Application form</AnchorLink>
-<AnchorLink>Badge process</AnchorLink>
+<AnchorLink>Badge information</AnchorLink>
 
 </AnchorLinks>
 
