--- a/src/pages/developing/angular-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/angular-tutorial/wrapping-up.mdx
@@ -33,7 +33,7 @@ available to anybody who completes the tutorial, not just IBM employees.
 
 ![](/images/carbon-badge.png)
 
-<Caption>IBM Digital badge</Caption>
+<Caption>IBM Digital Badge</Caption>
 
 </Column>
 </Row>
