--- a/src/pages/developing/react-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/react-tutorial/wrapping-up.mdx
@@ -54,7 +54,7 @@ badge:
 2. Have approved pull requests for steps 1 through 5 in the
    [carbon-tutorial repository](https://github.com/carbon-design-system/carbon-tutorial)
 3. Apply for the IBM Digital Badge by completing the
-   [form and survey](https://badges.carbondesignsystem.com/)
+   [form and survey](https://badges.carbondesignsystem.com/).
 
 <InlineNotification>
 
