--- a/src/pages/developing/vue-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/vue-tutorial/wrapping-up.mdx
@@ -52,7 +52,7 @@ badge:
    - Step 4. [Creating components](/developing/vue-tutorial/step-4)
    - Step 5. [Deploying to IBM Cloud](/developing/vue-tutorial/step-5)
 2. Have approved pull requests for steps 1 through 5 in the
-   [carbon-tutorial-vue repository](https://github.com/carbon-design-system/carbon-tutorial-vue)
+   [carbon-tutorial-vue repository](https://github.com/carbon-design-system/carbon-tutorial-vue).
 3. Apply for the IBM Digital Badge by completing the
    [form and survey](https://badges.carbondesignsystem.com/)
 
