chore(tutorial): remove references to experimental ui shell

--- a/src/pages/developing/react-tutorial/step-2.mdx
+++ b/src/pages/developing/react-tutorial/step-2.mdx
@@ -133,15 +133,13 @@ default 12 columns. We do this by adding `grid-columns-16: true` in our
 
 ```scss path=src/index.scss
 $feature-flags: (
-  ui-shell: true,
   grid-columns-16: true,
 );
 ```
 
 <InlineNotification>
 
-**Note:** Like before, the feature flag still needs to come before the Carbon
-`styles.scss` import.
+**Note:** The feature flag needs to come before the Carbon `styles.scss` import.
 
 </InlineNotification>
 
