--- a/src/pages/developing/angular-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/angular-tutorial/wrapping-up.mdx
@@ -40,21 +40,23 @@ available to anybody who completes the tutorial, not just IBM employees.
 
 ## Badge information
 
-### [IBM Carbon Design System Developer Essentials - Angular](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-angular)
+For more information about the IBM Carbon Design System Developer Essentials - Angular badge, see the [Acclaim](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-angular) site. 
+
+### Badge process
 
 This badge demonstrates knowledge about Carbon's Angular components. To earn the
 badge:
 
-1. Complete steps 1 through 5 of the Carbon Angular tutorial
+1. Complete steps 1 through 5 of the Carbon Angular tutorial:
    - Step 1. [Installing Carbon](/developing/angular-tutorial/step-1)
    - Step 2. [Building pages](/developing/angular-tutorial/step-2)
    - Step 3. [Using APIs](/developing/angular-tutorial/step-3)
    - Step 4. [Creating components](/developing/angular-tutorial/step-4)
    - Step 5. [Deploying to IBM Cloud](/developing/angular-tutorial/step-5)
 2. Have approved pull requests for steps 1 through 5 in the
-   [carbon-tutorial-angular repository](https://github.com/carbon-design-system/carbon-tutorial-angular)
+   [carbon-tutorial-angular repository](https://github.com/carbon-design-system/carbon-tutorial-angular).
 3. Apply for the IBM Digital Badge by completing the
-   [form and survey](https://badges.carbondesignsystem.com/)
+   [form and survey](https://badges.carbondesignsystem.com/).
 
 <InlineNotification>
 
