--- a/src/pages/developing/react-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/react-tutorial/wrapping-up.mdx
@@ -40,12 +40,14 @@ available to anybody who completes the tutorial, not just IBM employees.
 
 ## Badge information
 
-### [IBM Carbon Design System Developer Essentials - React](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-react)
+For more information about the IBM Carbon Design System Developer Essentials - React badge, see the [Acclaim](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-react) site. 
+
+### Badge process
 
 This badge demonstrates knowledge about Carbon's React components. To earn the
 badge:
 
-1. Complete steps 1 through 5 of the Carbon React tutorial
+1. Complete steps 1 through 5 of the Carbon React tutorial:
    - Step 1. [Installing Carbon](/developing/react-tutorial/step-1)
    - Step 2. [Building pages](/developing/react-tutorial/step-2)
    - Step 3. [Using APIs](/developing/react-tutorial/step-3)
