--- a/src/pages/developing/vue-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/vue-tutorial/wrapping-up.mdx
@@ -40,12 +40,14 @@ available to anybody who completes the tutorial, not just IBM employees.
 
 ## Badge information
 
-### [IBM Carbon Design System Developer Essentials - Vue](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-vue)
+For more information about the IBM Carbon Design System Developer Essentials - Vue badge, see the [Acclaim](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-vue) site. 
+
+### Badge process
 
 This badge demonstrates knowledge about Carbon's Vue components. To earn the
 badge:
 
-1. Complete steps 1 through 5 of the Carbon Vue tutorial
+1. Complete steps 1 through 5 of the Carbon Vue tutorial:
    - Step 1. [Installing Carbon](/developing/vue-tutorial/step-1)
    - Step 2. [Building pages](/developing/vue-tutorial/step-2)
    - Step 3. [Using APIs](/developing/vue-tutorial/step-3)
