added-state-image

--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -33,6 +33,14 @@ Hover states only apply to `unselected` buttons.
 | `:disabled` | background-color | `$disabled-01` |
 | `:disabled` | text color       | `$disabled-02` |
 
+<Row>
+<Column colLg={8}>
+
+![Example of content switcher states](images/content-switcher-style-color.png)
+
+</Column>
+</Row>
+
 ## Typography
 
 Content switcher text should be set in sentence case, with only the first word
