docs(content switcher): audit updates (#2038)
* docs(content switcher): audit updates

* added-state-image

--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -33,6 +33,14 @@ Hover states only apply to `unselected` buttons.
 | `:disabled` | background-color | `$disabled-01` |
 | `:disabled` | text color       | `$disabled-02` |
 
+<Row>
+<Column colLg={8}>
+
+![Example of content switcher states](images/content-switcher-style-color.png)
+
+</Column>
+</Row>
+
 ## Typography
 
 Content switcher text should be set in sentence case, with only the first word
@@ -52,7 +60,9 @@ plus the 16 px / 1rem on both sides of the text.
 
 | Class                       | Property                    | px / rem | Spacing token |
 | --------------------------- | --------------------------- | -------- | ------------- |
-| `.bx--content-switcher`     | height                      | 40 / 2.5 | –             |
+| `.bx--content-switcher`     | height: default             | 40 / 2.5 | –             |
+| `.bx--content-switcher`     | height: small               | 32 / 2   | –             |
+| `.bx--content-switcher`     | height: large               | 48 / 3   | –             |
 | `.bx--content-switcher`     | corner radius               | 4px      | –             |
 | `:after`                    | divider                     | 1px      | –             |
 | `.bx--content-switcher-btn` | padding-left, padding-right | 16 / 1   | `$spacing-05` |
@@ -64,5 +74,6 @@ plus the 16 px / 1rem on both sides of the text.
 </div>
 
 <Caption>
-  Structure and spacing measurements for content switcher | px / rem
+  Structure and spacing measurements for the default size content switcher | px
+  / rem
 </Caption>
