--- a/src/pages/developing/vue-tutorial/step-5.mdx
+++ b/src/pages/developing/vue-tutorial/step-5.mdx
@@ -252,7 +252,7 @@ to specify the file.
 successfully deploy, you might need to update the region code (e.g.
 `api.[REGION].cf.cloud.ibm.com`) to the region where your spaces were created,
 or create a space in the US South region.
-[Learn more.](https://cloud.ibm.com/docs/overview?topic=overview-whatsnew&origin_team=T02M79KSB#new-cloud-foundry-api-endpoints)
+[Learn more](https://cloud.ibm.com/docs/overview?topic=overview-whatsnew&origin_team=T02M79KSB#new-cloud-foundry-api-endpoints)
 
 </InlineNotification>
 
