--- a/src/pages/developing/angular-tutorial/step-5.mdx
+++ b/src/pages/developing/angular-tutorial/step-5.mdx
@@ -245,7 +245,7 @@ to specify the file.
 <InlineNotification>
 
 **Note:** This step assumes your spaces are in the US South region. To
-successfully deploy, you might need to update the region code (e.g.
+successfully deploy, you might need to update the region code (for example,
 `api.[REGION].cf.cloud.ibm.com`) to the region where your spaces were created,
 or create a space in the US South region.
 [Learn more](https://cloud.ibm.com/docs/overview?topic=overview-whatsnew&origin_team=T02M79KSB#new-cloud-foundry-api-endpoints)
